# scaleway-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Quick Start: Deploy Scaleway MCP Server to Serverless.md  README.md  SUMMARY.md  Scaleway MCP Server - Serverless Deployment Guide.md  Scaleway MCP Server.md  architecture_design.md  deploy.sh  deployment_research.md  mcp-config-example.json  pyproject.toml  research_findings.md  scaleway_http_server.py  scaleway_server.py  test_server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml
